tambah baca config.ini

--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -38,6 +38,12 @@ Anda harus memasangnya sendiri dengan mengunduh instalasinya di python.org.
 Atau, jika Python sudah terpasang di komputer Anda, maka Anda dapat melakukan
 {\em upgrade}.
 
+Ada cara lain menggunakan Python adalah dengan menggunakan layanan
+Google Colabs, yang mana kita diberikan akses ke sebuah mesin virtual
+yang sudah terpasang Python. Untuk pendekatan ini kita tidak perlu memasang
+Python lagi. Lebih mudah untuk belajar dan bahkan untuk membuat prototipe.
+Buku ini akan diperbaharui dengan cara menggunakan Google Colabs ini.
+
 \section{Memulai}
 Untuk memastikan Python berjalan, ketikkan "python" di terminal Linux Anda.
 (Bagi yang menggunakan Windows, hal ini dapat dilakukan dengan menggunakan
