--- a/pengantar.tex
+++ b/pengantar.tex
@@ -25,8 +25,10 @@ untuk versi 3. Namun secara prinsip mestinya sama.}
 Versi buku ini sudah menganjurkan untuk lebih condong ke versi 3
 karena pengembangan versi 2 sudah mulai dihentikan.
 [Catatan: buku mulai ditulis akhir 2017.]
+Bagian-bagian yang sudah terlanjur ditulis dengan menggunakan versi 2,
+sedikit demi sedikit mulai dikonversikan ke versi 3.
 
 
-Selamat menikmati versi 0.2.\\
-Bandung, Oktober 2018\\
+Selamat menikmati versi 0.3.\\
+Bandung, November 2020 \\
 Budi Rahardjo
