--- a/advanced.tex
+++ b/advanced.tex
@@ -266,6 +266,8 @@ dtype: float64
 \end{verbatim}
 
 
+\input{opencv}
+
 \section{Kriptografi}
 Sebagaimana bidang lain, Python memiliki {\em library} yang lengkap untuk
 kriptografi. Berikut ini hanya beberapa contoh penggunaan {\em library}
