--- a/opencv.tex
+++ b/opencv.tex
@@ -41,5 +41,10 @@ berikut.
 \caption{Hasil proses}
 \end{figure}
 
+Perhatikan betapa mudahnya menggunakan OpenCV untuk melakukan proses tersebut.
+Konversi warna itu dapat kita lakukan dengan satu perintah saja.
+Tanpa pustaka ini kita harus membuat sebuah {\em loop} yang mengubah
+setiap piksel dari gambar tersebut.
+
 Modul OpenCV ini dapat digunakan di berbagai aplikasi, termasuk untuk
 Artificial Intelligence atau Machine Learning.
