--- a/advanced.tex
+++ b/advanced.tex
@@ -83,6 +83,27 @@ Berikut adalah contoh operasional matriks dengan menggunakan numpy.
 Pertama, kita dapat membuat matriks $a$ dan $b$ kemudian menjumlahkan
 dan mengalikan matriks tersebut.
 
+\begin{equation*}
+   A = 
+   \begin{bmatrix}
+   1 & 2 & 3 \\
+   4 & 5 & 6 \\
+   7 & 8 & 9
+   \end{bmatrix}
+   \quad
+   B =
+   \begin{bmatrix}
+   3 & 3 & 3 \\
+   5 & 5 & 5 \\
+   5 & 3 & 1
+   \end{bmatrix}
+   \quad
+   C = A+B
+   \quad
+   D = A \times B
+\end{equation*}
+
+
 \begin{verbatim}
 import numpy as np
 a = np.array([[1,2,3],[4,5,6],[7,8,9]])
