--- a/pengantar.tex
+++ b/pengantar.tex
@@ -20,15 +20,16 @@ paling sempurna, tetapi mengikuti cara saya. (Apapun itu.)
 \st{Ketika buku ini ditulis, versi Python yang paling stabil adalah versi 2.7
 meskipun versi 3 juga sudah banyak digunakan orang. Ada banyak bagian di dalam
 buku ini yang dituliskan untuk Python versi 2.7 kemungkinan harus disesuaikan
-untuk versi 3. Namun secara prinsip mestinya sama.} 
+untuk versi 3. Sebagai contoh, print harus menggunakan tanda kurung.
+Namun secara prinsip mestinya sebagian besar akan tetap sama.} 
 
-Versi buku ini sudah menganjurkan untuk lebih condong ke versi 3
+Versi buku ini sudah menganjurkan untuk lebih condong ke Python versi 3
 karena pengembangan versi 2 sudah mulai dihentikan.
 [Catatan: buku mulai ditulis akhir 2017.]
 Bagian-bagian yang sudah terlanjur ditulis dengan menggunakan versi 2,
 sedikit demi sedikit mulai dikonversikan ke versi 3.
 
 
-Selamat menikmati versi 0.3.\\
-Bandung, November 2020 \\
+Selamat menikmati versi 0.9\\
+Bandung, Maret 2022 \\
 Budi Rahardjo
