--- a/python.tex
+++ b/python.tex
@@ -18,7 +18,7 @@
 
 
 
-\title{Koding Python}
+\title{Pemrograman Python}
 \author{Budi Rahardjo}
 
 \usepackage{graphicx} % Needed to insert images into the document
