--- a/pengantar.tex
+++ b/pengantar.tex
@@ -27,9 +27,9 @@ Versi buku ini sudah menganjurkan untuk lebih condong ke Python versi 3
 karena pengembangan versi 2 sudah mulai dihentikan.
 [Catatan: buku mulai ditulis akhir 2017.]
 Bagian-bagian yang sudah terlanjur ditulis dengan menggunakan versi 2,
-sedikit demi sedikit mulai dikonversikan ke versi 3.
+sedikit demi sedikit mulai diubah ke versi 3.
 
 
-Selamat menikmati versi 0.9\\
-Bandung, Maret 2022 \\
+Selamat menikmati versi 0.91\\
+Bandung, Mei 2022 \\
 Budi Rahardjo
