--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -5,6 +5,16 @@ library Python ini. Lengkapnya library ini juga yang menyebabkan
 Python dipergunakan di berbagai aplikasi. Berbagai sekolah (dan
 perguruan tinggi) bahkan mengajarkan Python sebagai pengantar pemrograman.
 
+Bahasa Python dianggap agak ``mudah'' digunakan sehingga dapat diajarkan
+kepada orang-orang yang tidak memiliki latar belakang pendidikan pemrograman.
+Jadi Python digunakan oleh orang-orang di bidang Biologi sampai Bahasa.
+Manager-manager yang ingin belajar statistik atau {\em data science}
+dapat menggunakan bahasa Python ini.
+Alternatifnya adalah belajar menggunakan bahasa R, tetapi kalau 
+nanti ingin melakukan pemrograman untuk yang lainnya lagi harus belajar
+bahasa pemrograman lagi. Daripada seperti itu, lebih baik belajar satu
+bahasa saja. Pilihannya adalah bahasa Python.
+
 Bahasa Python merupakan sebuah {\em interpreted language} berbeda dengan
 bahasa C yang {\em compiled}. Pada bahasa yang {\em compiled}, kita memiliki
 kode sumber ({\em source code}) yang harus dirakit ({\em compile}) dahulu
